projectRelease/IngressNginxController/Cookie/deploy-nginx-v2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-cookie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
  namespace: ingress-cookie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-v2
  template:
    metadata:
      labels:
        app: nginx-v2
    spec:
      containers:
      - name: nginx
        image: shixiaochuangk8s/nginx:1.28.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config-v2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2-svc
  namespace: ingress-cookie
spec:
  selector:
    app: nginx-v2
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
