projectRelease/IngressNginxController/Cookie/normal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: normal-ingress
  namespace: ingress-cookie
spec:
  ingressClassName: nginx
  rules:
    - host: cookie.shixiaochuang.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-v1-svc
                port:
                  number: 80
